--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
-Podfile\.lock
+## User settings
+xcuserdata/
 
 Pods/
-GridPreviewer\.xcworkspace/xcuserdata/kyl\.xcuserdatad/xcdebugger/Breakpoints_v2\.xcbkptlist
+.DS_Store
